<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/bix_padding"
    tools:context=".ui.NewStudentsActivity">
    <LinearLayout
        android:id="@+id/idLineRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/bix_padding">
        <EditText
            android:id="@+id/idEDTFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/nama_lengkap"/>
        <EditText
            android:id="@+id/idEDTAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/alamat"/>
        <EditText
            android:id="@+id/idEDTJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/jurusan"/>
        <EditText
            android:id="@+id/idEDTProdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/prodi"/>
        <EditText
            android:id="@+id/idEDTJekel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:hint="@string/jekel"/>
        <Button
            android:id="@+id/idBtnAddStudents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_button"
            android:padding="@dimen/bix_padding"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/add_students"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>