<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateStudentsActivity">
    <LinearLayout
        android:id="@+id/idLineRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/bix_padding">
        <EditText
            android:id="@+id/idEDTUPDELFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/nama_lengkap"/>
        <EditText
            android:id="@+id/idEDTUPDELAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/alamat"/>
        <EditText
            android:id="@+id/idEDTUPDELJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/jurusan"/>
        <EditText
            android:id="@+id/idEDTUPDELProdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/prodi"/>
        <EditText
            android:id="@+id/idEDTUPDELJekel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/jekel"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="@dimen/small_padding">
           <Button
               android:id="@+id/idBtnUpdateStudents"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/rounder_button"
               android:padding="@dimen/bix_padding"
               android:layout_marginTop="20dp"
               android:layout_weight="1"
               android:textSize="20sp"
               android:text="@string/update_students"/>
       </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>