<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/bix_padding"
    app:cardElevation="20dp"
    app:cardUseCompatPadding="true"
    android:elevation="10dp">

    <LinearLayout
        android:id="@+id/idLineRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/bix_padding">
        <TextView
            android:id="@+id/idTVFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/nama_lengkap"/>
        <TextView
            android:id="@+id/idTVAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/alamat"/>
        <TextView
            android:id="@+id/idTVJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/jurusan"/>
        <TextView
            android:id="@+id/idTVProdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/prodi"/>
        <TextView
            android:id="@+id/idTVJekel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:padding="@dimen/bix_padding"
            android:background="@drawable/rounder_edittext"
            android:text="@string/jekel"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>